Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/repeatingAnnotations/MissingDefaultCase2.out
MissingDefaultCase2.java:19:1: compiler.err.duplicate.annotation.invalid.repeated: Foo
MissingDefaultCase2.java:11:1: compiler.err.invalid.repeatable.annotation.elem.nondefault: FooContainer, other()
2 errors
